edit is comlete also delete works

--- a/gui/booking.ui
+++ b/gui/booking.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1040</width>
-    <height>820</height>
+    <width>1275</width>
+    <height>915</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,21 +15,6 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
-    <property name="leftMargin">
-     <number>100</number>
-    </property>
-    <property name="topMargin">
-     <number>100</number>
-    </property>
-    <property name="rightMargin">
-     <number>100</number>
-    </property>
-    <property name="bottomMargin">
-     <number>100</number>
-    </property>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout"/>
-    </item>
     <item>
      <widget class="QTableWidget" name="tableWidget">
       <property name="layoutDirection">
@@ -68,29 +53,48 @@
         <set>AlignCenter</set>
        </property>
       </column>
+      <column>
+       <property name="text">
+        <string>حذف</string>
+       </property>
+       <property name="textAlignment">
+        <set>AlignCenter</set>
+       </property>
+      </column>
      </widget>
     </item>
     <item>
-     <widget class="QCalendarWidget" name="calendar">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>200</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="baseSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QPushButton" name="update">
+        <property name="text">
+         <string>برزورسانی جدول</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCalendarWidget" name="calendar">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="baseSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -99,7 +103,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1040</width>
+     <width>1275</width>
      <height>26</height>
     </rect>
    </property>
