--- a/gui/edit_book_radio.ui
+++ b/gui/edit_book_radio.ui
@@ -233,7 +233,7 @@
          </size>
         </property>
         <property name="text">
-         <string>. . . قرار دادن عکس رادیولوژی  </string>
+         <string>. . . عوض کردن عکس رادیولوژی  </string>
         </property>
        </widget>
       </item>
