--- a/gui/core_radio.ui
+++ b/gui/core_radio.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>872</width>
-    <height>625</height>
+    <width>1127</width>
+    <height>783</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="layoutDirection">
+   <enum>Qt::RightToLeft</enum>
   </property>
   <property name="iconSize">
    <size>
@@ -38,10 +41,10 @@
       <property name="font">
        <font>
         <family>B Nazanin</family>
-        <pointsize>12</pointsize>
-        <weight>75</weight>
+        <pointsize>15</pointsize>
+        <weight>50</weight>
         <italic>false</italic>
-        <bold>true</bold>
+        <bold>false</bold>
         <underline>false</underline>
         <kerning>false</kerning>
        </font>
@@ -67,7 +70,10 @@
         <height>80</height>
        </size>
       </property>
-      <widget class="QWidget" name="tab">
+      <widget class="QWidget" name="tab_1">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
        <attribute name="icon">
         <iconset>
          <normalon>:/icon/add_patient.png</normalon>
@@ -76,8 +82,16 @@
        <attribute name="title">
         <string>اضافه کردن بیمار جدید</string>
        </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <layout class="QVBoxLayout" name="vertic_1"/>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tab_2">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
        <attribute name="icon">
         <iconset>
          <normalon>:/icon/all_patient.png</normalon>
@@ -86,6 +100,15 @@
        <attribute name="title">
         <string>بیماران</string>
        </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <layout class="QVBoxLayout" name="vertic_2">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetDefaultConstraint</enum>
+          </property>
+         </layout>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tab_3">
        <attribute name="icon">
@@ -96,8 +119,20 @@
        <attribute name="title">
         <string>رروز نوبت</string>
        </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <layout class="QVBoxLayout" name="vertic_3">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetDefaultConstraint</enum>
+          </property>
+         </layout>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tab_4">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
        <attribute name="icon">
         <iconset>
          <normalon>:/icon/all_appointment.png</normalon>
@@ -106,6 +141,15 @@
        <attribute name="title">
         <string>لیست نوبت ها</string>
        </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <layout class="QVBoxLayout" name="vertic_4">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetDefaultConstraint</enum>
+          </property>
+         </layout>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -116,7 +160,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>872</width>
+     <width>1127</width>
      <height>26</height>
     </rect>
    </property>
