--- a/gui/new_gui/search_patient/search_patient.ui
+++ b/gui/new_gui/search_patient/search_patient.ui
@@ -62,6 +62,11 @@
       </column>
       <column>
        <property name="text">
+        <string>نام دکتر</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>تصویر بیمار</string>
        </property>
       </column>
