--- a/gui/icon/icon.qrc
+++ b/gui/icon/icon.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icon">
+    <file>doctor-team-icon-gray-background-123249074-removebg-preview.png</file>
     <file>patient_records.png</file>
     <file>add_doctor.png</file>
     <file>all_appointment.png</file>
