--- a/gui/new_gui/messaging/message.ui
+++ b/gui/new_gui/messaging/message.ui
@@ -136,6 +136,9 @@
             <height>50</height>
            </size>
           </property>
+          <property name="shortcut">
+           <string>Return</string>
+          </property>
          </widget>
         </item>
         <item>
